# A2UI

./: .gitignore
.github/workflows/: lit_samples_build.yml  web_build_and_test.yml
a2a_samples/: pyproject.toml
a2a_samples/a2ui_contact_lookup/: README.md  __main__.py  a2ui_examples.py  a2ui_schema.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  tools.py
angular/: package-lock.json
angular/projects/a2a-chat-canvas/src/lib/a2ui-catalog/: theme.ts
angular/projects/lib/src/lib/catalog/: datetime-input.ts  default.ts
docs/: index.md
editor/: package-lock.json
renderers/angular/: package-lock.json
renderers/lit/: package-lock.json
samples/agent/adk/: pyproject.toml
samples/agent/adk/github-ideas/: .gitignore  README.md  __main__.py  a2ui_examples.py  a2ui_schema.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  tools.py
samples/client/angular/: package-lock.json
samples/client/lit/: package-lock.json  package.json
samples/client/lit/contact/: package.json
samples/client/lit/restaurant/: package.json  tsconfig.json
samples/client/lit/shell/: app.ts
samples/client/lit/shell/configs/: github-ideas.ts
web/: package-lock.json  package.json
web/lib/: tsconfig.json
web/lib/src/0.8/ui/: datetime-input.ts  root.ts
web/src/0.8/data/: model-processor.ts
